--- a/Lab6/src/main/resources/application.properties
+++ b/Lab6/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=Lab6
+
+spring.datasource.url=jdbc:sqlserver://localhost\\SQLEXPRESS:51234;databaseName=J5Shop;encrypt=true;trustServerCertificate=true
+spring.datasource.username=sa
+spring.datasource.password=123
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
