--- a/Lab8/src/main/resources/application.properties
+++ b/Lab8/src/main/resources/application.properties
@@ -1,1 +1,21 @@
 spring.application.name=Lab8
+
+spring.datasource.url=jdbc:mysql://localhost:3307/login_lab8?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA config
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587 
+spring.mail.username=goldenboy972007@gmail.com
+spring.mail.password=xibmodbrzixsmxse
+spring.mail.properties.mail.smtp.auth=true 
+spring.mail.properties.mail.smtp.starttls.enable=true 
+spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
